--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Permanent+Marker|Reenie+Beanie|Rock+Salt|Ruge+Boogie&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Permanent+Marker|Reenie+Beanie|Rock+Salt|Ruge+Boogie&display=swap"
+    /></noscript>
   </body>
 </html>
