--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,60 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      body {
+        height: 100vh;
+        background-color: #fff;
+        font-family: "Montserrat", "Roboto", "Open Sans", sans-serif;
+      }
+
+      #root {
+        font-family: "Montserrat", "Roboto", "Open Sans", sans-serif;
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+        min-height: 100vh;
+        max-height: 100vh;
+        width: 100vw;
+        font-size: 150%;
+        max-width: 100vw;
+      }
+
+      div {
+        display: flex;
+      }
+
+      #splash {
+        flex-grow: 1;
+        position: relative;
+        margin: 20% 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        text-align: center;
+      }
+      #splash h1 {
+        font-size: 250%;
+      }
+      #splash div {
+        flex-grow: 1;
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div id="splash">
+        <div>
+          <h1>The JavaScript Quiz Show</h1>
+        </div>
+        <div>
+          <sub>by Jess Chadwick</sub>
+        </div>
+      </div>
+    </div>
     <!-- initialize the SDK after all desired features are loaded -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-app.js"></script>
@@ -47,14 +97,22 @@
     -->
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Permanent+Marker|Reenie+Beanie|Rock+Salt|Ruge+Boogie&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat|Cedarville+Cursive|Permanent+Marker|Reenie+Beanie|Rock+Salt|Ruge+Boogie&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <link
+      rel="preload"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
     <noscript
       ><link
         rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Permanent+Marker|Reenie+Beanie|Rock+Salt|Ruge+Boogie&display=swap"
+        href="https://fonts.googleapis.com/css?family=Montserrat|Cedarville+Cursive|Permanent+Marker|Reenie+Beanie|Rock+Salt|Ruge+Boogie&display=swap"/><link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     /></noscript>
   </body>
 </html>
